# calliope

./: .gitignore  README.md  package.json
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  DESIGN.md  SPEC.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.windows-ci.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: accessibility.rs  commands.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/injection/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/models/: mod.rs
src-tauri/src/postprocess/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/whisper/: mod.rs
src/components/Onboarding/: index.tsx
src/components/Overlay/: index.tsx
src/components/Settings/: index.tsx
src/components/StatusIndicator/: index.tsx
src/components/Toast/: index.tsx
src/store/: index.ts
src/types/: index.ts
