[package]
name = "calliope"
version = "0.2.0"
description = "Local, cross-platform speech-to-text dictation"
authors = ["syntaxbullet"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "calliope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
keyring = "3"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
cpal = "0.17"
rubato = "1"
audioadapter-buffers = "2"
arboard = "3"
enigo = "0.6"
tauri-plugin-autostart = "2.5.1"
sha2 = "0.10"
futures-util = "0.3"
hound = "3"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
atspi = "0.29"
zbus = "5"
